--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="styleme" href="styleme.css"/>
+        <link type="text/css" rel="stylesheet" href="styleme.css"/>
         <title>LEANDRA TROTMAN</title>
     </head>
     
